--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
+
 body {
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   background-color: rgb(48, 48, 48);
 }
